Tue Apr  6 14:19:16 CEST 2004 (tk)
----------------------------------
  * global hardening patch: use strlcpy/strlcat instead of strncpy/strncat
    (Bastian Kleineidam <calvin*debian.org>)

Mon Apr  5 23:49:23 CEST 2004 (tk)
----------------------------------
  * contrib: new init script for SuSE (by Martin Fuxa <yeti*email.cz>)
  * configure: fix linking problem under NetBSD (reported by Nigel);
	       enable support for threads (pth is required and
	       LDFLAGS="-L/usr/pkg/lib" and CPPFLAGS="-I/usr/pkg/include"
	       must be exported). Thanks to Jorgen Norgaard <jnp*anneli.dk>.
  * clamscan: fix --bell behaviour ("one beep" problem reported by Tomasz
	      Papszun)
  * libclamav: small cosmetics

Mon Apr  5 15:39:12 BST 2004 (njh)
----------------------------------
  * contrib:	Windows client (finally!) open sourced

Mon Apr  5 15:39:55 CEST 2004 (tk)
----------------------------------
  * clamd: respect TCPAddr in stream scanner (problem reported by
	   Youza Youzovic <youza*post.cz>)

Mon Apr  5 13:19:02 BST 2004 (njh)
----------------------------------
  * libclamav:	Scan attachments with no filename (suggestion by Trog)

Mon Apr  5 10:47:43 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Added SAVE_TO_DISC #define which, when activated,
  	scans embedded RFC822 messages from disc rather than in memory. It
	is recommended that this option is always enabled unless ClamAV is
	to be installed on a system where many nested levels of RFC822 messages
	cannot occur

Mon Apr  5 10:16:29 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: minor code update

Sun Apr  4 02:57:10 CEST 2004 (tk)
----------------------------------
  * freshclam: do not terminate on SIGALRM (bug introduced on Sat Mar 27),
	       reported by Fajar A. Nugraha <fajar*telkom.co.id>.
  * clamd: dazukoio: use writen()
  * clamscan: test for W_OK instead of R_OK in writeaccess(). Bug reported