@@ -28,8 +28,6 @@ clamav_milter_SOURCES = \
     $(top_srcdir)/shared/getopt.h \
     $(top_srcdir)/shared/memory.c \
     $(top_srcdir)/shared/memory.h \
-    $(top_srcdir)/shared/strutil.c \
-    $(top_srcdir)/shared/strutil.h \
     clamav-milter.c
 
 man_MANS = $(top_srcdir)/docs/man/clamav-milter.8
