@@ -317,6 +317,9 @@
  *
  * Change History:
  * $Log: clamav-milter.c,v $
+ * Revision 1.70  2004/04/06 22:43:43  kojm
+ * reverse strlcpy/strlcat patch
+ *
  * Revision 1.69  2004/04/06 12:14:52  kojm
  * use strlcpy/strlcat
  *
@@ -509,7 +512,7 @@
  * Revision 1.6  2003/09/28 16:37:23  nigelhorne
  * Added -f flag use MaxThreads if --max-children not set
  */
-static	char	const	rcsid[] = "$Id: clamav-milter.c,v 1.69 2004/04/06 12:14:52 kojm Exp $";
+static	char	const	rcsid[] = "$Id: clamav-milter.c,v 1.70 2004/04/06 22:43:43 kojm Exp $";
 
 #define	CM_VERSION	"0.70g"
 
@@ -525,7 +528,6 @@ static	char	const	rcsid[] = "$Id: clamav-milter.c,v 1.69 2004/04/06 12:14:52 koj
 #include "str.h"
 #include "../libclamav/others.h"
 #include "clamav.h"
-#include "strutil.h"
 
 #ifndef	CL_DEBUG
 #define	NDEBUG
@@ -1299,7 +1301,7 @@ pingServer(int serverNumber)
 
 		memset((char *)&server, 0, sizeof(struct sockaddr_un));
 		server.sun_family = AF_UNIX;
-		strlcpy(server.sun_path, localSocket, sizeof(server.sun_path));
+		strncpy(server.sun_path, localSocket, sizeof(server.sun_path));
 
 		if((sock = socket(AF_UNIX, SOCK_STREAM, 0)) < 0) {
 			perror("socket");
@@ -1912,7 +1914,7 @@ clamfi_eom(SMFICTX *ctx)
 
 		memset((char *)&server, 0, sizeof(struct sockaddr_un));
 		server.sun_family = AF_UNIX;
-		strlcpy(server.sun_path, localSocket, sizeof(server.sun_path));
+		strncpy(server.sun_path, localSocket, sizeof(server.sun_path));
 
 		if((privdata->cmdSocket = socket(AF_UNIX, SOCK_STREAM, 0)) < 0) {
 			perror("socket");
@@ -2583,7 +2585,7 @@ connect2clamd(struct privdata *privdata)
 
 			memset((char *)&server, 0, sizeof(struct sockaddr_un));
 			server.sun_family = AF_UNIX;
-			strlcpy(server.sun_path, localSocket, sizeof(server.sun_path));
+			strncpy(server.sun_path, localSocket, sizeof(server.sun_path));
 
 			if((privdata->cmdSocket = socket(AF_UNIX, SOCK_STREAM, 0)) < 0) {
 				perror("socket");
