@@ -46,7 +46,6 @@
 #include "dazukoio_xp.h"
 #include "dazukoio.h"
 #include "others.h"
-#include "strutil.h"
 
 #if !defined(NO_COMPAT12)
 #include "dazukoio_compat12.h"
@@ -174,12 +173,12 @@ int dazukoRegister_TS(dazuko_id_t **dazuko_id, const char *groupName, const char
 
 	if (strcasecmp(mode, "r") == 0)
 	{
-		strlcpy(regMode, "R", sizeof(regMode));
+		strncpy(regMode, "R", sizeof(regMode));
 		write_mode = 0;
 	}
 	else if (strcasecmp(mode, "r+") == 0 || strcasecmp(mode, "rw") == 0)
 	{
-		strlcpy(regMode, "RW", sizeof(regMode));
+		strncpy(regMode, "RW", sizeof(regMode));
 		write_mode = 1;
 	}
 	else
