@@ -35,7 +35,6 @@
 #include "others.h"
 #include "server.h"
 #include "output.h"
-#include "strutil.h"
 
 int localserver(const struct optstruct *opt, const struct cfgstruct *copt, struct cl_node *root)
 {
@@ -47,7 +46,7 @@ int localserver(const struct optstruct *opt, const struct cfgstruct *copt, struc
 
     memset((char *) &server, 0, sizeof(server));
     server.sun_family = AF_UNIX;
-    strlcpy(server.sun_path, cfgopt(copt, "LocalSocket")->strarg, sizeof(server.sun_path));
+    strncpy(server.sun_path, cfgopt(copt, "LocalSocket")->strarg, sizeof(server.sun_path));
 
     if((sockfd = socket(AF_UNIX, SOCK_STREAM, 0)) == -1) {
 	estr = strerror(errno);
