@@ -38,7 +38,6 @@
 #include "cfgparser.h"
 #include "memory.h"
 #include "output.h"
-#include "strutil.h"
 
 #ifdef PF_INET
 # define SOCKET_INET	PF_INET
@@ -79,7 +78,7 @@ int client(const struct optstruct *opt)
     } else if((cpt = cfgopt(copt, "LocalSocket"))) {
 
 	server.sun_family = AF_UNIX;
-	strlcpy(server.sun_path, cpt->strarg, sizeof(server.sun_path));
+	strncpy(server.sun_path, cpt->strarg, sizeof(server.sun_path));
 
 	if((sockd = socket(AF_UNIX, SOCK_STREAM, 0)) < 0) {
 	    perror("socket()");
