@@ -25,8 +25,6 @@ clamscan_SOURCES = \
     $(top_srcdir)/shared/getopt.h \
     $(top_srcdir)/shared/memory.c \
     $(top_srcdir)/shared/memory.h \
-    $(top_srcdir)/shared/strutil.c \
-    $(top_srcdir)/shared/strutil.h \
     clamscan.c \
     options.c \
     options.h \
