@@ -27,8 +27,6 @@ freshclam_SOURCES = \
     $(top_srcdir)/shared/getopt.h \
     $(top_srcdir)/shared/memory.c \
     $(top_srcdir)/shared/memory.h \
-    $(top_srcdir)/shared/strutil.c \
-    $(top_srcdir)/shared/strutil.h \
     freshclam.c \
     freshclam.h \
     options.c \
