@@ -107,9 +107,9 @@ int main(int argc, char **argv)
 	opt->filename=(char*)mcalloc(len + 256, sizeof(char));
 
         for(i=optind; i<argc; i++) {
-	    strlcat(opt->filename, argv[i], len+256);
+	    strncat(opt->filename, argv[i], strlen(argv[i]));
 	    if(i != argc-1)
-		strlcat(opt->filename, " ", len+256);
+		strncat(opt->filename, " ", 1);
 	}
 
     }
