@@ -69,7 +69,6 @@
 
 #include "unrarlib.h"                       /* include global configuration */
 #include "others.h"
-#include "strutil.h"
 /* ------------------------------------------------------------------------ */
 
 
@@ -1181,8 +1180,8 @@ int stricomp(char *Str1,char *Str2)
   char S1[512],S2[512];
   char *chptr;
 
-  strlcpy(S1,Str1,sizeof(S1));
-  strlcpy(S2,Str2,sizeof(S2));
+  strncpy(S1,Str1,sizeof(S1));
+  strncpy(S2,Str2,sizeof(S2));
 
   while((chptr = strchr(S1, '\\')) != NULL) /* ignore backslash             */
   {
